--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               font-family: arial;
             "
           >
-            MARION BERTIN
+            Md Mehedi Hasan
           </h3>
 
           <h5
@@ -42,18 +42,18 @@
               font-weight: normal;
             "
           >
-            RESPONSABLE MARKETING
+            Frontend Web Developer 
           </h5>
           <hr style="color: #0e2827" />
           <p style="color: #0e2827">
-            +33 7 48 94 18 44 <br />
-            MARION@JNPRSPIRITS.COM
+            +88019 89 61 85 43<br />
+            Hmdmehedi2016@gmail.com
           </p>
 
           <b> <i style="color: #0e2827">Follow Us</i> </b>
           <p style="margin: 10px 0px 0px">
             <a
-              href="https://www.instagram.com/jnprspirits/"
+              href="https://www.instagram.com/rcmehedi15/"
               style="text-decoration: none" target="_blank"
             >
               <img
@@ -64,7 +64,7 @@
               />
             </a>
             <a
-              href="https://www.facebook.com/jnprspirits/"
+              href="https://www.facebook.com/rcmehedi15/"
               style="text-decoration: none" target="_blank"
             >
               <img
@@ -75,7 +75,7 @@
               />
             </a>
             <a
-              href="https://www.linkedin.com/company/jnpr-spirits/" 
+              href="https://www.linkedin.com/in/rcmehedi15" 
               style="text-decoration: none" target="_blank"
             >
               <img
@@ -85,7 +85,7 @@
                 border="0"
               /> </a
             ><br />
-            <b style="color: #0e2827">@JNPRSPIRITS</b>
+            <b style="color: #0e2827">@rcmehedi15</b>
           </p>
         </td>
       </tr>
